# Cpp_snakeGame

./: CMakeLists.txt  README.md  installinformation.txt
src/: Astar.cpp  Astar.h  food.cpp  food.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h  stone.cpp  stone.h
